# Licenses

./: pip_licenses.json  pyproject.toml
